--- a/RealEstateCourse/Pages/_ViewImports.cshtml
+++ b/RealEstateCourse/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using RealEstateCourse
 @using RealEstateCourse.Data
+@using RealEstateCourse.Models
 @namespace RealEstateCourse.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
