Estate Model Created

--- a/RealEstateCourse/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/RealEstateCourse/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -3,8 +3,4 @@
 @{
     ViewData["Title"] = "Access denied";
 }
-
-<header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+<h3 class="alert alert-danger text-center font-weight-bold"></h3>
