--- a/RealEstateCourse/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RealEstateCourse/Areas/Identity/Pages/Account/Register.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
+                <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
